# html-processor

./: LICENSE  Makefile  README.md  README.rst  README.ru.md  pyproject.toml
.github/workflows/: test.yml
assets/: purpose-tag.html  purpose-text.html  purpose.html  source.html
examples/: heroes.html  insert_thmbnails.py
html_processor/: __init__.py  processor.py  rules.py
tests/: test_html_processor.py
