[tool.poetry]
name = "html-processor"
version = "0.0.1"
description = ""
authors = ["Дмитрий <acrius@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.7"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
