[tool.poetry]
name = "html-processor"
version = "0.0.4"
description = "Package for creating HTML content processing templates"
license = "MIT"
authors = ["Дмитрий <acrius@mail.ru>"]

readme = 'README.rst'

repository = "https://github.com/brogency/html-processor"
homepage = "https://github.com/brogency/html-processor"

keywords = ['html', 'processing', 'bs4',]

[tool.poetry.dependencies]
python = "^3.7"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
