[tool.poetry]
name = "html-processor"
version = "0.0.5"
description = "Package that provides a set of classes around BeautifulSoup for easy HTML modification."
license = "MIT"
authors = ["Дмитрий <acrius@mail.ru>"]
readme = "README.rst"
repository = "https://github.com/brogency/html-processor"
homepage = "https://github.com/brogency/html-processor"
documentation = "https://github.com/brogency/html-processor"
keywords = ["html", "processing", "bs4", "BeautifulSoup"]
classifiers = [
    "Topic :: Text Processing :: Markup :: HTML"
]

[tool.poetry.dependencies]
python = "^3.6"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
coverage = "^5.0"
ipdb = "^0.13.2"
pylint = "^2.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
